--- a/style.css
+++ b/style.css
@@ -5,10 +5,25 @@ body {
 
 header {
   text-align: center;
-  background-color: rgb(172, 172, 172);
+  color: white;
+  background-color: rgb(0, 104, 35);
   margin: 0px;
 }
 
 .hidden {
   display: none;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  max-height: 150px;
+}
+
+ul {
+  list-style: none;
+  font-display: center;
+  display: flex column;
 }
